--- a/python_server/templates/index.html
+++ b/python_server/templates/index.html
@@ -16,6 +16,7 @@
       <div class="secondary-controls">
         <button id="prevBtn">⏮ Prev</button>
         <button id="nextBtn">⏭ Next</button>
+        <button id="fullscreenBtn">⛶ Fullscreen</button>
       </div>
     </div>
 
